--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=send" />
-
     <link rel="stylesheet" href="./css/style.css">
-    <title>Whatsapp 2</title>
+    <title>Chat</title>
 </head>
 
 <body>
@@ -53,6 +52,10 @@
 </body>
 
 </html>
+
+
+
+
 
 
 
